--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
 
     &bull;
 
-    {% if current_path == "/bookshelf" %}
+    {% if current_path == "/bookshelf/" %}
     bookshelf
     {% else %}
     <a href="/bookshelf/">bookshelf</a>
