--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="lightning" content="lnurlp:raphjaph@lntxbot.com"/>
         <meta property="og:image" content="/favicon.png" />
         <title>raphael</title>        
-        <link rel="icon" href="images/favicon.png" type="image/png">
+        <link rel="icon" href="/images/favicon.png" type="image/png">
         <link rel="stylesheet" href="/css/style.css" type="text/css">
     </head>
 
